src/objects/ddrive__CfG__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CfG library settings</description>
    <fields>
        <fullName>ddrive__Bulk_Test_Size__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>This is the number of records that will be created by unit tests for bulk testing</inlineHelpText>
        <label>Bulk Test Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Debugging__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If true, diagnostic functions within Apex code will be enabled.</inlineHelpText>
        <label>Debugging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Enable_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If false, all triggers using the CfG_TriggerFactory will be disabled</inlineHelpText>
        <label>Enable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Log_Recipients__c</fullName>
        <inlineHelpText>comma-separated list of email addresses to receive daily log</inlineHelpText>
        <label>Log Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CfG</label>
</CustomObject>